<resources>
    <string name="app_name">VeganApp</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="followingAmount">Following</string>
    <string name="veganPoints">Vegan points</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="followers">Following</string>
    <string name="search">Search</string>
    <string name="wheelchair">wheelchair</string>
    <string name="make_food">Make food</string>
    <string name="goto_restaurant">Go to restaurant</string>
    <string name="choose_recipe">Choose a recipe</string>
    <string name="choose_restaurant">Choose a restaurant</string>
    <string name="choose_blog">Blogs and articles</string>
    <string name="dinner">Go out for dinner</string>
    <string name="blogs">Read blogs and articles</string>
    <string name="allergies">Allergies</string>
    <string name="ingredients">Ingredients</string>
    <string name="instructions">Instructions</string>
    <string name="open_google_maps">Show on map</string>
    <string name="go_to_website">Go to website</string>
    <string name="details">Details</string>
    <string name="no_challenges">No challenges completed yet</string>
    <string name="no_followers">You don\'t follow anyone yet</string>
    <string name="no_blogs">No blogs to choose from</string>
    <string name="no_recipes">No recipes to choose from</string>
    <string name="no_restaurants">No restaurants to choose from</string>


    <string name="number_placeholder">99</string>

    <string name="claim_your_points">Claim your points</string>
    <string name="placeholder">placeholder</string>
    <string name="upload">Upload</string>
    <string name="publish">Publish</string>
    <string name="feed">Feed</string>
    <string name="challenges">Challenges</string>



    <!-- Strings related to login -->
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_surname">Surname</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="permission_read_storage">"Storage permissions are needed for accessing images
        from the gallery."
    </string>
    <string name= "error_network">Something went wrong, please try again!</string>
    <string name="action_register">Register</string>
    <string name="already_registered">Already registered? Log me in.</string>
    <string name="new_member">Not a member yet? Sign up now.</string>
    <string name="userExists">User already exists</string>
</resources>
