<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/goto_restaurant"
        android:layout_gravity="center"
        android:textSize="30sp"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/restaurantNamePublish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/placeholder"/>

    <TextView
        android:id="@+id/restaurantPointsPublish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/placeholder"/>

    <ImageView
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:id="@+id/restaurantImage"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:contentDescription="@string/placeholder"
        android:src="@android:drawable/sym_def_app_icon" />

    <Button
        android:id="@+id/uploadRestaurantImageButton"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/upload"/>


    <Button
        android:id="@+id/publishRestaurantButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/publish"/>

</LinearLayout>