<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical">

    <Button
        android:id="@+id/makeFood"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/make_food"
        android:drawableLeft="@drawable/ic_kitchen"
        android:drawableStart="@drawable/ic_kitchen"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/button_margin"
        />

    <Button
        android:id="@+id/goToDinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dinner"
        android:drawableLeft="@drawable/ic_restaurant"
        android:drawableStart="@drawable/ic_restaurant"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/button_margin"
        />

    <Button
        android:id="@+id/goToBlogs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/blogs"
        android:drawableLeft="@drawable/ic_book"
        android:drawableStart="@drawable/ic_book"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/button_margin"
        />


</LinearLayout>