<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@color/bg_register"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.pdepu.veganapp_p3_h1.activities.RegisterActivity">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/register_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/register_form"
        android:fillViewport="true"
        android:scrollbars="none"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_register_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">


                <EditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:background="@color/white"
                    android:hint="@string/prompt_name"
                    android:inputType="text"
                    android:padding="10dp"
                    android:textColor="@color/input_login"
                    android:maxLines="1" />


                <EditText
                    android:id="@+id/surname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:background="@color/white"
                    android:hint="@string/prompt_surname"
                    android:inputType="text"
                    android:padding="10dp"
                    android:textColor="@color/input_login"
                    android:maxLines="1" />


                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:background="@color/white"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:padding="10dp"
                    android:textColor="@color/input_login"
                    android:maxLines="1" />

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:background="@color/white"
                    android:hint="@string/prompt_password"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:textColor="@color/input_login"
                    android:maxLines="1" />


            <Button
                android:id="@+id/email_register_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@color/btn_login_bg"
                android:text="@string/register"
                android:textColor="@color/btn_register" />

            <Button
                android:id="@+id/already_registered"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:background="@null"
                android:text="@string/already_registered"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="15sp" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>