<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <ImageView

            android:id="@+id/restaurantImage"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:contentDescription="@string/placeholder"
            android:src="@android:drawable/sym_def_app_icon" />



        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/restaurantDetails"
                android:layout_width="wrap_content"
                android:text="@string/placeholder"
                android:layout_height="wrap_content"/>

            <CheckBox
                android:id="@+id/wheelChairAccessCheckbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <Button
            android:id="@+id/openGoogleMaps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/open_google_maps" />

        <Button
            android:id="@+id/claimYourPointsRestaurantButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:text="@string/claim_your_points" />


    </LinearLayout>


</ScrollView>
