<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/make_food"
        android:layout_gravity="center"
        android:textSize="30sp"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/recipeNamePublish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/placeholder"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>

    <TextView
        android:id="@+id/recipePointsPublish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/placeholder"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>

    <RelativeLayout
        android:id="@+id/addPictureLayoutPublish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_horizontal_margin">


        <ImageView
            android:id="@+id/recipeImage"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:contentDescription="@string/placeholder"
            android:scaleType="fitXY"
            android:src="@drawable/placeholder_small" />

        <ImageButton
            android:id="@+id/recipeImageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_add_a_photo"
            android:contentDescription="@string/placeholder"
            android:layout_centerInParent="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>



    </RelativeLayout>



    <Button
        android:id="@+id/publishRecipeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/publish"/>

</LinearLayout>