<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@android:color/transparent"
            app:cardElevation="0dp">

            <RelativeLayout

                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <ImageView

                    android:id="@+id/recipeImage"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:contentDescription="@string/placeholder"
                    android:src="@android:drawable/sym_def_app_icon" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/recipeImage"
                    android:layout_toRightOf="@id/recipeImage"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/recipeDetails"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/placeholder" />

                    <!--<TextView-->
                    <!--android:id="@+id/RecipeVeganPoints"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_gravity="center_vertical"-->
                    <!--android:text="TWEE" />-->

                </LinearLayout>


            </RelativeLayout>


        </android.support.v7.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/ingredients"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/recipeIngredients"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/black_border" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/instructions"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/recipeInstructions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/black_border" />

        <Button
            android:id="@+id/claimYourPointsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:text="@string/claim_your_points" />


    </LinearLayout>


</ScrollView>
